feat(脚本): 保留二个编码入口
1